--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="me.dio.simulator">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Simulator"
-        tools:targetApi="31">
+        android:theme="@style/Theme.Simulator">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
@@ -28,7 +24,7 @@
             android:name=".ui.DetailActivity"
             android:exported="true"
             android:parentActivityName=".ui.MainActivity"
-            android:theme="@style/Theme.Simulator.NoAcionBar" />
+            android:theme="@style/Theme.Simulator.NoActionBar" />
     </application>
 
 </manifest>
